--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@canvasjs/charts": "^3.7.33",
         "@canvasjs/vue-charts": "^1.0.1",
         "@meforma/vue-toaster": "^1.3.0",
         "@sentry/vue": "^7.88.0",
